latest products cards mobile version overflow fixed

--- a/src/components/latestProducts/LatestProductsCards.css
+++ b/src/components/latestProducts/LatestProductsCards.css
@@ -75,8 +75,11 @@
 
 @media screen and (max-width: 740px) {
   .cards-carousel-container {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+
+    overflow-x: hidden;
+
     display: block !important;
     background-attachment: fixed;
     background-position: center;
